--- a/documentation/index.html
+++ b/documentation/index.html
@@ -231,8 +231,7 @@
 │       │   ├── face5.jpg
 │       │   ├── face6.jpg
 │       │   ├── face7.jpg
-│       │   ├── logo-dark.svg
-│       │   ├── logo.svg
+│       │   ├── logo.png
 │       │   └── unsplash
 │       │       ├── 1.jpg
 │       │       ├── 10.jpg
